--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "pg": "^8.7.3",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "pg-format": "^1.0.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
